[package]
name = "ocdjbshal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
bitbang-hal = "0.3.2"
void = "1.0.2"
nb = "0.1.3"
#lis3dh = "0.4.1"
#lis3dh = { path = "../lis3dh-rs" }
#lis3dsh = "0.1.0"
lis3dsh = { path = "../lis3dsh-rs" }
